--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       @keyframes heroPulse {
         0%,
         100% {
-          transform: scale(1.2);
+          transform: scale(1);
           filter: drop-shadow(0 10px 30px rgba(249, 115, 22, 0.15));
         }
         50% {
-          transform: scale(1.3);
+          transform: scale(1.1);
           filter: drop-shadow(0 14px 38px rgba(249, 115, 22, 0.28));
         }
       }
@@ -272,57 +272,51 @@
 
     <!-- HERO -->
 
-    <section class="min-h-screen bg-[#FFF6EE]">
+   <section class="min-h-screen bg-[#FFF6EE]">
+  <div class="mx-auto w-screen max-w-7xl px-4 py-16 sm:px-6 lg:px-8 lg:py-32">
+    <div class="relative grid items-center gap-12 lg:grid-cols-2 lg:gap-28">
+      <!-- halo suave detrás de la imagen -->
       <div
-        class="mx-auto w-screen max-w-7xl px-4 py-16 sm:px-6 lg:px-8 lg:py-32"
-      >
-        <div class="relative grid items-center gap-12 lg:grid-cols-2 lg:gap-28">
-          <!-- halo suave detrás de la imagen -->
-          <div
-            class="pointer-events-none absolute -right-24 top-1/2 h-[520px] w-[520px] -translate-y-1/2 rounded-full bg-[#FFE3D1] blur-3xl opacity-60"
-            aria-hidden="true"
-          ></div>
+        class="pointer-events-none absolute -right-24 top-1/2 h-[520px] w-[520px] -translate-y-1/2 rounded-full bg-[#FFE3D1] blur-3xl opacity-60"
+        aria-hidden="true"
+      ></div>
 
-          <!-- Columna izquierda: texto -->
-          <div class="relative">
-            <h1
-              class="text-4xl font-extrabold tracking-tight text-slate-900 sm:text-5xl"
-            >
-              Skills que suben el <span class="text-[#F97316]">nivel</span> de
-              las personas
-            </h1>
+      <!-- Columna izquierda: texto -->
+      <div class="relative">
+        <h1 class="text-4xl font-extrabold tracking-tight text-slate-900 sm:text-5xl">
+          Skills que suben el <span class="text-[#ed6c3c]">nivel</span> de las personas
+        </h1>
 
-            <p
-              class="mt-6 max-w-prose text-base leading-relaxed text-slate-600 sm:text-lg"
-            >
-              Integramos formación presencial, e-learning y experiencias outdoor
-              para desarrollar habilidades con impacto. Diseñamos rutas de
-              aprendizaje alineadas a tus objetivos y medimos progreso para
-              asegurar resultados.
-            </p>
+        <p class="mt-6 max-w-prose text-base leading-relaxed text-slate-600 sm:text-lg">
+          Integramos formación presencial, e-learning y experiencias outdoor
+          para desarrollar habilidades con impacto. Diseñamos rutas de
+          aprendizaje alineadas a tus objetivos y medimos progreso para
+          asegurar resultados.
+        </p>
 
-            <div class="mt-8 flex flex-wrap items-center gap-3">
-              <a
-                href="#servicios"
-                class="inline-flex items-center justify-center rounded-full bg-[#F97316] px-6 py-3 text-sm font-semibold text-white shadow-sm transition hover:brightness-95 focus:outline-none focus:ring-2 focus:ring-[#F97316]/40"
-              >
-                Ver servicios
-              </a>
-            </div>
-          </div>
-
-          <!-- Columna derecha: imagen -->
-          <div class="relative flex justify-center lg:justify-end">
-            <img
-              src="/assets/img/cohete.png"
-              alt="Ilustración de una persona sobre un cohete"
-              class="w-full max-w-xl object-contain hero-pulse"
-              loading="lazy"
-            />
-          </div>
+        <div class="mt-8 flex flex-wrap items-center gap-3">
+          <a
+            href="#servicios"
+            class="inline-flex items-center justify-center rounded-full bg-[#ed6c3c] px-6 py-3 text-sm font-semibold text-white shadow-sm transition hover:brightness-95 focus:outline-none focus:ring-2 focus:ring-[#ed6c3c]/40"
+          >
+            Ver servicios
+          </a>
         </div>
       </div>
-    </section>
+
+      <!-- Columna derecha: imagen -->
+      <div class="relative flex justify-center lg:justify-end">
+        <img
+          src="assets/img/cohete.png"
+          alt="Ilustración de una persona sobre un cohete"
+          class="w-full max-w-xl object-contain hero-pulse"
+          loading="lazy"
+        />
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- SEPARADOR-->
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 my-10">
