--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       <!-- Columna derecha: imagen -->
       <div class="relative flex justify-center lg:justify-end">
         <img
-          src=".assets/img/hero.png"
+          src="./assets/img/cohete.png"
           alt="Ilustración de una persona sobre un cohete"
           class="w-full max-w-xl object-contain hero-pulse"
           loading="lazy"
