--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <!-- BANNER -->
     <div class="border-b border-gray-200 bg-gray-100 px-4 py-2 text-gray-900">
       <p class="text-center font-medium">
-        🚀 Capacitación a medida para tu equipo 👥
+        Capacitación a medida para tu equipo 👥
       </p>
     </div>
 
