--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
   </head>
 
   <body id="inicio" class="m-0 bg-white text-gray-900 overflow-x-hidden">
-    <header class="bg-white sticky top-0 z-50">
+    <header class="sticky top-0 z-50 bg-[#ed6c3c] md:bg-white">
+
       <div class="w-full">
         <div class="flex h-16 items-center justify-between">
           <!-- IZQUIERDA: Logo + Menú -->
@@ -205,11 +206,11 @@
           <!-- DERECHA: Botón + Hamburguesa -->
           <div class="flex items-center gap-3 pr-3">
             <a
-              href="#contacto"
-              class="inline-flex items-center rounded-full bg-[#ed6c3c] px-5 py-2 text-sm font-semibold text-[#ffffff] transition hover:opacity-90"
-            >
-              ¡Contáctanos!
-            </a>
+  href="#contacto"
+  class="hidden md:inline-flex items-center rounded-full bg-[#ed6c3c] px-5 py-2 text-sm font-semibold text-white transition hover:opacity-90"
+>
+  ¡Contáctanos!
+</a>
 
             <button
               id="navToggle"
@@ -232,34 +233,16 @@
         </div>
 
         <!-- Mobile nav -->
-        <div id="mobileNav" class="md:hidden hidden border-t border-gray-200">
+        <div id="mobileNav" class="md:hidden hidden border-t border-white/20 bg-white">
+
           <nav class="flex flex-col gap-1 p-3 text-sm font-medium">
-            <a
-              href="#inicio"
-              class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50"
-              >Inicio</a
-            >
-            <a
-              href="#servicios"
-              class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50"
-              >Servicios</a
-            >
-            <a
-              href="#clientes"
-              class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50"
-              >Clientes</a
-            >
-            <a
-              href="#quienes"
-              class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50"
-              >Quiénes somos</a
-            >
-            <a
-              href="#contacto"
-              class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50"
-              >Contacto</a
-            >
-          </nav>
+  <a href="#inicio" class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50">Inicio</a>
+  <a href="#servicios" class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50">Servicios</a>
+  <a href="#clientes" class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50">Clientes</a>
+  <a href="#quienes" class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50">Quiénes somos</a>
+  <a href="#contacto" class="rounded-lg px-3 py-2 text-gray-700 hover:bg-gray-50">Contacto</a>
+</nav>
+
         </div>
       </div>
     </header>
@@ -347,7 +330,8 @@
           ></span>
 
           <div
-            class="relative flex h-full transform items-end border-2 border-black bg-white transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
+            class="relative flex h-full transform items-end border-2 border-black bg-[#F8FAFC] transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
+
           >
             <div
               class="px-4 pb-4 transition-opacity group-hover:absolute group-hover:opacity-0 sm:px-6 sm:pb-4 lg:px-8 lg:pb-8"
@@ -395,7 +379,7 @@
           ></span>
 
           <div
-            class="relative flex h-full transform items-end border-2 border-black bg-white transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
+            class="relative flex h-full transform items-end border-2 border-black bg-[#F8FAFC] transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
           >
             <div
               class="px-4 pb-4 transition-opacity group-hover:absolute group-hover:opacity-0 sm:px-6 sm:pb-4 lg:px-8 lg:pb-8"
@@ -439,7 +423,7 @@
           ></span>
 
           <div
-            class="relative flex h-full transform items-end border-2 border-black bg-white transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
+            class="relative flex h-full transform items-end border-2 border-black bg-[#F8FAFC] transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2"
           >
             <div
               class="px-4 pb-4 transition-opacity group-hover:absolute group-hover:opacity-0 sm:px-6 sm:pb-4 lg:px-8 lg:pb-8"
@@ -826,7 +810,7 @@
       <!-- Texto izquierda -->
       <div class="max-w-xl">
         <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl">
-          Quiénes somos y en qué creemos
+          Quiénes somos 
         </h2>
         <p class="mt-3 text-gray-600">
           Diseñamos experiencias de aprendizaje que suben el nivel: formación presencial,
@@ -927,7 +911,7 @@
 
     <!-- CONTACTO -->
 
-    <section id="contacto" class="bg-[#FFF6EE]">
+    <section id="contacto" class="bg-[#F8FAFC]">
       <div class="p-8 md:p-12 lg:px-16 lg:py-24">
         <div class="mx-auto max-w-lg text-center">
           <h2 class="text-2xl font-bold text-gray-900 md:text-3xl">
@@ -941,7 +925,8 @@
         </div>
 
         <div class="mx-auto mt-8 max-w-xl">
-          <form action="#" class="sm:flex sm:gap-4">
+          <form action="#" class="flex flex-col gap-3 sm:flex-row sm:gap-4">
+
             <div class="sm:flex-1">
               <label for="email" class="sr-only">Email</label>
 
@@ -962,10 +947,7 @@
         </div>
       </div>
     </section>
-    <!-- SEPARADOR-->
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 my-10">
-      <hr class="border-t border-gray-300" />
-    </div>
+    
 
     <footer class="bg-[#ed6c3c] text-white">
       <div
