--- a/index.html
+++ b/index.html
@@ -471,8 +471,8 @@
       </div>
     </section>
     <!-- CARRUSEL (código completo) -->
-    <section id="carrusel" class="min-h-screen bg-[#FFF6EE]">
-      <div class="mx-auto max-w-7xl px-4 py-12 sm:px-6 lg:px-8">
+    <section id="carrusel" class="bg-[#FFF6EE] py-12">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="max-w-xl">
           <h2 class="text-2xl font-bold text-gray-900 sm:text-3xl">
             Algunas de nuestras experiencias destacadas
