--- a/index.html
+++ b/index.html
@@ -923,53 +923,57 @@
         ¿Lo conversamos?
       </h2>
 
-      <p class="mt-4 text-gray-500">
+      <p class="mt-4 text-gray-600">
         Déjanos tu correo y te contactamos para armar una propuesta a tu medida.
       </p>
     </div>
 
-    <div class="mx-auto mt-10 max-w-xl">
-      <!-- CONTENEDOR centrado -->
-      <div class="mx-auto flex max-w-md flex-col items-center gap-5">
-        <!-- INPUT -->
-        <div class="w-full">
-          <label for="email" class="sr-only">Email</label>
-          <input
-            id="email"
-            type="email"
-            placeholder="Tu e-mail"
-            class="w-full rounded-md border border-gray-200 bg-white p-3 text-gray-700 shadow-sm transition focus:outline-none focus:ring-2 focus:ring-[#ed6c3c]/40"
-          />
-        </div>
+    <div class="mx-auto mt-8 max-w-md">
+      <!-- FORM: cambia solo el action si algún día cambias de Formspree -->
+      <form
+        action="https://formspree.io/f/xwvnbdvd"
+        method="POST"
+        class="flex flex-col items-center gap-4"
+      >
+        <label for="email" class="sr-only">Email</label>
 
-        <!-- BOTÓN ENVIAR -->
+        <input
+          id="email"
+          name="email"
+          type="email"
+          required
+          placeholder="Tu e-mail"
+          class="w-full rounded-xl border border-gray-200 bg-white p-4 text-gray-700 shadow-sm transition focus:outline-none focus:ring-2 focus:ring-[#ed6c3c]/40"
+        />
+
         <button
           type="submit"
           class="w-full inline-flex items-center justify-center rounded-full bg-[#ed6c3c] px-6 py-3 text-sm font-semibold text-white shadow-md transition hover:bg-[#d85f34] focus:outline-none focus:ring-2 focus:ring-[#ed6c3c]/40"
         >
           Enviar
         </button>
+      </form>
 
-        <!-- TEXTO -->
-        <p class="mt-4 text-gray-500">
-          O si prefieres, también podemos hablar por WhatsApp 😄
-        </p>
+      <!-- Texto + WhatsApp -->
+      <p class="mt-6 text-center text-sm text-gray-600">
+        O si prefieres, también podemos hablar por WhatsApp 🤘
+      </p>
 
-        <!-- BOTÓN WHATSAPP -->
+      <div class="mt-3 flex justify-center">
         <a
-  href="https://wa.me/569XXXXXXXX?text=Hola%20SkillTree%2C%20quiero%20cotizar%20una%20capacitaci%C3%B3n."
-  target="_blank"
-  rel="noopener"
-  class="inline-flex w-full items-center justify-center gap-2 rounded-full bg-[#25D366] px-6 py-3 text-sm font-semibold text-white shadow-md transition hover:brightness-95 focus:outline-none focus:ring-2 focus:ring-[#25D366]/40"
->
-  <i class="fa-brands fa-whatsapp text-[18px]"></i>
-  Hablar por WhatsApp
-</a>
-
+          href="https://wa.me/569XXXXXXXX?text=Hola%20SkillTree%2C%20quiero%20cotizar%20una%20capacitaci%C3%B3n."
+          target="_blank"
+          rel="noopener"
+          class="inline-flex items-center gap-2 rounded-full bg-[#25D366] px-6 py-3 text-sm font-semibold text-white shadow-md transition hover:brightness-95 focus:outline-none focus:ring-2 focus:ring-[#25D366]/40"
+        >
+          <i class="fa-brands fa-whatsapp text-[18px]"></i>
+          Hablar por WhatsApp
+        </a>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
