--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
 
       <div class="mt-3 flex justify-center">
         <a
-          href="https://wa.me/569XXXXXXXX?text=Hola%20SkillTree%2C%20quiero%20cotizar%20una%20capacitaci%C3%B3n."
+          href="https://wa.me/56963036456?text=Hola%20SkillTree%2C%20quisiera%20cotizar%20una%20capacitaci%C3%B3n.%20%C2%BFMe%20pueden%20orientar%3F"
           target="_blank"
           rel="noopener"
           class="inline-flex items-center gap-2 rounded-full bg-[#25D366] px-6 py-3 text-sm font-semibold text-white shadow-md transition hover:brightness-95 focus:outline-none focus:ring-2 focus:ring-[#25D366]/40"
