--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
 
       <!-- Texto + WhatsApp -->
       <p class="mt-6 text-center text-sm text-gray-600">
-        O si prefieres, también podemos hablar por WhatsApp 🤘
+        O si prefieres, también podemos hablar por WhatsApp 🙂
       </p>
 
       <div class="mt-3 flex justify-center">
